fix: fix css issue with slider - fix horizontal scrollable issue in slider - remove left and right for slider

--- a/src/App.scss
+++ b/src/App.scss
@@ -47,19 +47,19 @@
       color: white;
       margin: 10px;
       background-color: white;
-      width: 80px;
+      width: 50px;
       border-radius: 5px;
     }
   }
 
   &__background {
-    padding: 50px 5px 50px 5px;
+    padding: 50px 0px;
     font-size: 18px;
     width: 600px;
     margin: 0px auto;
     line-height: 30px;
-    @media only screen and (max-width: 600px) {
-      width: 100%;
+    @media only screen and (max-width: 700px) {
+      width: 90%;
     }
   }
 }
