--- a/src/components/SlickCard/SlickCard.scss
+++ b/src/components/SlickCard/SlickCard.scss
@@ -1,7 +1,8 @@
 .slickcard {
   &__container {
-    padding: 10px 5px;
+    padding: 10px 0px;
   }
+
   &__header {
     font-size: 18px;
     font-weight: bold;
